--- a/package.json
+++ b/package.json
@@ -1,22 +1,7 @@
 {
-<<<<<<< HEAD
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "build": "vite build",
-        "dev": "vite"
-    },
-    "devDependencies": {
-        "@tailwindcss/vite": "^4.0.0",
-        "axios": "^1.8.2",
-        "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^1.2.0",
-        "tailwindcss": "^4.0.0",
-        "vite": "^6.0.11"
-    }
-=======
-  "name": "btapi",
-  "version": "0.1.0",
+    "name": "backend_ecommerce",
+  "version": "1.0.0",
+  "main": "index.js",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
@@ -56,5 +41,4 @@
       "last 1 safari version"
     ]
   }
->>>>>>> 98f427349e0ea38f2ac367dd81d098b7532b17e9
 }
