--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "backend_ecommerce",
+    "name": "backend_ecommerse",
   "version": "1.0.0",
   "main": "index.js",
   "private": true,
